[skip ci] added BACKBONE_EXEMPLARS

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -5,7 +5,7 @@
 ; 1 . GENERAL OPTIONS
 
 ; number of cores available
-NODES=4
+NODES=1
 
 ; overall verbosity level
 VERBOSITY=-v
@@ -43,13 +43,15 @@ TREEPL_SMOOTH=100
 ; or 'feature'. When blasting, we retain superclusters whose reciprocal overlap is
 ; specified as MERGE_OVERLAP. We will only retain alignments whose divergence does
 ; not exceed BACKBONE_MAX_DISTANCE (to prevent saturation) and we will join alignments
-; such that each exemplar species participates in at least BACKBONE_MIN_COVERAGE
-; alignments, which we try to increase up to BACKBONE_MAX_COVERAGE, if available
+; such that each of the BACKBONE_EXEMPLARS exemplar species per genus  participates in at 
+; least BACKBONE_MIN_COVERAGE alignments, which we try to increase up to BACKBONE_MAX_COVERAGE, 
+; if available.
 ALN_MERGE=blast
 MERGE_OVERLAP=0.51
 BACKBONE_MAX_DISTANCE=0.1
 BACKBONE_MIN_COVERAGE=3
-BACKBONE_MAX_COVERAGE=5
+BACKBONE_MAX_COVERAGE=4
+BACKBONE_EXEMPLARS=2
 
 ; parameters for genus trees. within the genera we might accept more rapidly evolving
 ; loci, hence the CLADE_MAX_DISTANCE might exceed BACKBONE_MAX_DISTANCE. This is
