[skip ci] adding phyml to config and VM

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -5,7 +5,7 @@
 ; 1 . GENERAL OPTIONS
 
 ; number of cores available
-NODES=1
+NODES=4
 
 ; overall verbosity level
 VERBOSITY=-v
@@ -19,6 +19,7 @@ RANDOM_SEED=1234
 ; substitution models for inference tools
 EXAML_MODEL=GAMMA
 RAXML_MODEL=GTRGAMMA
+PHYML_MODEL=GTR
 
 ; number of RAXML runs and bootstraps
 RAXML_RUNS=100
@@ -50,7 +51,7 @@ ALN_MERGE=blast
 MERGE_OVERLAP=0.51
 BACKBONE_MAX_DISTANCE=0.1
 BACKBONE_MIN_COVERAGE=3
-BACKBONE_MAX_COVERAGE=4
+BACKBONE_MAX_COVERAGE=10
 BACKBONE_EXEMPLARS=2
 
 ; parameters for genus trees. within the genera we might accept more rapidly evolving
@@ -99,6 +100,7 @@ EXAML_BIN=examl
 EXABAYES_BIN=exabayes
 EXAML_PARSER_BIN=parse-examl
 EXABAYES_PARSER_BIN=parse-exabayes
+PHYML_BIN=phyml
 BLASTP_BIN=blastp
 BLASTN_BIN=blastn
 MAKEBLASTDB_BIN=makeblastdb
