[skip ci] fixed bug

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -19,7 +19,7 @@ RANDOM_SEED=1234
 ; substitution models for inference tools
 EXAML_MODEL=GAMMA
 RAXML_MODEL=GTRGAMMA
-PHYML_MODEL=GTR
+PHYMLP_MODEL=GTR
 
 ; number of RAXML runs and bootstraps
 RAXML_RUNS=100
@@ -64,8 +64,8 @@ BACKBONE_EXEMPLARS=2
 ; each species in a genus tree
 CLADE_MAX_DISTANCE=0.3
 CLADE_MIN_DENSITY=0.2
-CLADE_MAX_MARKERS=10
-CLADE_TAXON_MIN_MARKERS=2
+CLADE_MIN_COVERAGE=2
+CLADE_MAX_COVERAGE=10
 CLADE_MAX_HAPLOTYPES=3
 
 ; Configuration for setting up the database and parsing the sequences.
