[skip ci] changed documentation

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -58,9 +58,8 @@ BACKBONE_EXEMPLARS=2
 ; loci, hence the CLADE_MAX_DISTANCE might exceed BACKBONE_MAX_DISTANCE. This is
 ; because we might assume less saturation. The CLADE_MIN_DENSITY specifies how
 ; many of the clade members must minimally be present to accept the alignment.
-; CLADE_MAX_MARKERS limits the number of markers that is included in the analysis.
-; CLADE_TAXON_MIN_MARKERS sets the minimum number of required markers for a taxon in the clade
-; CLADE_MAX_HAPLOTYPES sets the maximum number of additional haplotypes to add to 
+; CLADE_MIN_COVERAGE and CLADE_MAX_COVERAGE sets minimum and maximum marker coverage 
+; per taxon. CLADE_MAX_HAPLOTYPES sets the maximum number of additional haplotypes to add to 
 ; each species in a genus tree
 CLADE_MAX_DISTANCE=0.3
 CLADE_MIN_DENSITY=0.2
