correcting phyml model

--- a/conf/supersmart.ini
+++ b/conf/supersmart.ini
@@ -19,7 +19,7 @@ RANDOM_SEED=1234
 ; substitution models for inference tools
 EXAML_MODEL=GAMMA
 RAXML_MODEL=GTRGAMMA
-PHYMLP_MODEL=GTR
+PHYML_MODEL=GTR
 
 ; number of RAXML runs and bootstraps
 RAXML_RUNS=100
