[skip ci] now setting correct paths

--- a/conf/docker/Dockerfile
+++ b/conf/docker/Dockerfile
@@ -1,17 +1,19 @@
-FROM ubuntu:14.04
+FROM naturalis/supersmart:latest
 
 ADD default.pp /
 
-RUN apt-get -y update && apt-get install -y puppet
+RUN apt-get -y update && apt-get install -y puppet nano
 
 RUN puppet apply /default.pp 
 
 ENV PERL5LIB "$PERL5LIB:/supersmart/lib/"
 ENV PATH "$PATH:/supersmart/script/"
+ENV PATH "$PATH:/supersmart/tools/bin/"
 ENV SUPERSMART_HOME "/supersmart/"
+ENV EDITOR=nano
 
-VOLUME [ "/mydata" ]
-WORKDIR /mydata
+VOLUME [ "/shared" ]
+WORKDIR /supersmart
 
-## CMD ~/supersmart/script/smrt
-
+RUN cd /supersmart
+RUN /usr/bin/git pull
