[skip ci] try to speed up build on docker hub

--- a/conf/docker/Dockerfile
+++ b/conf/docker/Dockerfile
@@ -3,7 +3,8 @@
 # 'default.pp' manifest.
 
 # specify version of ubuntu
-FROM ubuntu:14.04
+# FROM ubuntu:14.04
+FROM naturalis/supersmart
 
 # add scripts
 ADD default.pp /
