[skip ci] check dockerhub performance without phylota dl

--- a/conf/docker/Dockerfile
+++ b/conf/docker/Dockerfile
@@ -39,4 +39,4 @@ RUN echo 'source /intro.sh' >> /root/.bashrc
 RUN puppet apply /default.pp 
 
 # run unit tests
-RUN cd $SUPERSMART_HOME && perl Makefile.PL && make test
+# RUN cd $SUPERSMART_HOME && perl Makefile.PL && make test
