--- a/conf/docker/Dockerfile
+++ b/conf/docker/Dockerfile
@@ -38,5 +38,7 @@ RUN echo 'source /intro.sh' >> /root/.bashrc
 # provision virtual machine with SUPERSMART environment
 RUN puppet apply /default.pp 
 
+RUN wget http://biovel.naturalis.nl/phylota.sqlite.gz
+
 # run unit tests
 # RUN cd $SUPERSMART_HOME && perl Makefile.PL && make test
