[skip ci] check if push with unzipped phylota works

--- a/conf/docker/Dockerfile
+++ b/conf/docker/Dockerfile
@@ -39,6 +39,7 @@ RUN echo 'source /intro.sh' >> /root/.bashrc
 RUN puppet apply /default.pp 
 
 RUN wget http://biovel.naturalis.nl/phylota.sqlite.gz
+RUN gunzip phylota.sqlite.gz
 
 # run unit tests
 # RUN cd $SUPERSMART_HOME && perl Makefile.PL && make test
