[skip ci] change env

--- a/conf/docker/Dockerfile
+++ b/conf/docker/Dockerfile
@@ -18,7 +18,7 @@ ENV PATH "$PATH:/supersmart/script/"
 ENV PATH "$PATH:/supersmart/tools/bin/"
 ENV SUPERSMART_HOME "/supersmart/"
 ENV EDITOR "nano"
-ENV DATABASE_FILE "/phylota/phylota.sqlite"
+ENV SUPERSMART_DATABASE_FILE "/phylota/phylota.sqlite"
 
 # this is needed by treePL on the virtual machine
 ENV LD_LIBRARY_PATH "$LD_LIBRARY_PATH:/usr/lib64"
